<resources>
    <string name="app_name">WanderingLocal</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="use_my_location">Use my location</string>
    <string name="categories">Categories</string>
    <string name="city_state_hint">City, State</string>
    <string name="location">Location</string>
    <string name="custom_search_term">Custom</string>
    <string name="business_name">Business Name</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="business_address">Loading address…</string>
    <string name="banner_ad_unit_id">ca-app-pub-5508350934489373/5399873632</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="empty_timeline_text">Sorry, we couldn\'t find anything. Check your connection, try again, or wander somewhere else :(</string>
    <string name="only_one_widget_allowed">Sorry, only one instance of this widget is allowed at a time.</string>
    <string name="logo_cd">%s Logo</string>
    <string name="favorite">favorite</string>
</resources>